--- a/final/style.css
+++ b/final/style.css
@@ -3,29 +3,287 @@ body{
     justify-content: center;
     align-items: center;
     background-color: black;
+    gap: 5px;
 }
 main{
+    position: absolute;
+    margin-top: 500px;
     width: 500px;
     height: 500px;
     border: 1px  solid black;
-
     display:flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
 .card{
-    width: 48px;
-    height: 48px;
-    border: 1px solid blue;
+    width: 30px;
+    height: 30px;
+    border: 1px solid white;
     background-color: black;
 }
 .objetivo{
     background-color: green;
 }
 .jugador1{
-    background-color: orange;
+    background-color: purple;
 }
 .jugador2{
+    background-color: yellow;
+}
+.parteJ1{
+    height: 100px;
+    width: 300px;
+    background-color: black;
+    border: 1px solid white;
+    color: white;
+    position: absolute;
+    margin-bottom: 350px;
+    margin-right: 1000px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.parteJ2{
+    height: 100px;
+    width: 300px;
+    background-color: black;
+    border: 1px solid white;
+    color: white;
+    position: absolute;
+    margin-bottom: 350px;
+    margin-left: 1000px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.nombreJ1{
+    width: 300px;
+    height: 99px;
+    background-color: black;
+    border-bottom: 1px solid white;
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 60px;
+}
+.marcadorJ1{
+    width: 300px;
+    height: 100px;
+    background-color: black;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.contadorJ1{
+    width: 300px;
+    height: 99px;
+    border-bottom: 1px solid white;
+    font-size: 30px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.conteoJ1{
+    width: 300px;
+    height: 200px;
+}
+
+.nombreJ2{
+    width: 300px;
+    height: 99px;
+    background-color: black;
+    border-bottom: 1px solid white;
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 60px;
+}
+.marcadorJ2{
+    width: 300px;
+    height: 100px;
+    background-color: black;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.contadorJ2{
+    width: 300px;
+    height: 99px;
+    border-bottom: 1px solid white;
+    font-size: 30px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.conteoJ2{
+    width: 300px;
+    height: 200px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 70px;
+}
+
+.mostrarJ1{
+    width: 300px;
+    height: 100px;
+    position: absolute;
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    margin-top: 300px;
+    margin-right: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.mostrarJ2{
+    width: 300px;
+    height: 100px;
+    position: absolute;
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    margin-top: 300px;
+    margin-left: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.colorJ1{
+    width: 99px;
+    height: 100px;
+    border-right: 1px solid white;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.controlesJ1{
+    width: 200px;
+    height: 100px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.colorJ2{
+    width: 99px;
+    height: 100px;
+    border-right: 1px solid white;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.controlesJ2{
+    width: 200px;
+    height: 100px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.colorcitoJ1{
+    width: 50px;
+    height: 50px;
     background-color: purple;
+}
+.fotocontrolesJ1{
+    width: 101px;
+    height: 63px;
+}
+.colorcitoJ2{
+    width: 50px;
+    height: 50px;
+    background-color: yellow;
+}
+.mostrarObjetivo{
+    width: 300px;
+    height: 100px;
+    position: absolute;
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    margin-top: 650px;
+}
+.nombreObjetivo{
+    width: 300px;
+    height: 29px;
+    border-bottom: 1px solid white;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.colorObjetivo{
+    width: 300px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.colorcitoObjetivo{
+    width: 50px;
+    height: 50px;
+    background-color: green;
+}
+.reiniciar{
+    width: 100px;
+    height: 30px;
+    position: absolute;
+    margin-top: 820px;
+    font-weight: bold;
+    cursor: pointer;
+    background: black;
+    border: none;
+    padding: 16px 32px;
+    color: #FFF;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.reiniciar::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, red, orange, yellow, green, cyan, blue, purple, red, orange, yellow, green, cyan, blue, purple);
+    background-size: 800%;
+    border-radius: 10px;
+    filter: blur(8px);
+    animation: glowing 20s linear infinite;
+}
+@keyframes glowing{
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100%{
+        background-position: 0 0;
+    }
 }
